[package]
name = "gossip-chat"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.34", features = ["derive"] }
crossterm = "0.28.1"
data-encoding = "2.8.0"
futures-lite = "2.6.0"
iroh = "0.34.0"
iroh-gossip = "0.34.1"
rand = "0.9.0"
ratatui = "0.29.0"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = "1.44.1"
